--- a/README
+++ b/README
@@ -14,7 +14,7 @@ listed alphabetically, not in "you should follow them in this order" order.
 I'm going throw them as listed anyway just so I can keep track.
 
 Left off at
-    Grammars (don't skip this.)
+    Meta-Object Protocol
 
 
 INSTALLING {#{{{
