--- a/README
+++ b/README
@@ -14,7 +14,7 @@ listed alphabetically, not in "you should follow them in this order" order.
 I'm going throw them as listed anyway just so I can keep track.
 
 Left off at
-    Meta-Object Protocol
+    Object Orientation
 
 
 INSTALLING {#{{{
@@ -25,6 +25,8 @@ INSTALLING {#{{{
     "rakudobrew", so figured I'd go with that instead of doing a full manual 
     build.
 
+
+    https://github.com/tadzik/rakudobrew
 
     $ git clone git@github.com:tadzik/rakudobrew.git ~/.rakudobrew
         - add ~/.rakudobrew/bin/ to your PATH
@@ -48,10 +50,18 @@ INSTALLING {#{{{
     $ panda install Task::Star
         "Meta-package for modules included in Rakudo Star"
 
-        This produced an error on installing Grammar::Debugger.  Task::Star is 
-        a list of modules to install, and I'm concerned that the entire list 
-        stopped getting installed when the Grammar::Debugger error was 
-        encountered.
+        In my first rakudo installation (v6.b), this produced an error on 
+        installing Grammar::Debugger.  Task::Star is a list of modules to 
+        install, and I'm concerned that the entire list stopped getting 
+        installed when the Grammar::Debugger error was encountered.
+
+
+
+        However, in my second rakudo installation (v6.c, the Christmas 2015 
+        "production-ready" perl6), installing Task::Star worked without issue, 
+        so the rest of this note became unnecessary.
+
+
 
         Task::Star comes from here:
             https://github.com/tadzik/Task-Star
@@ -74,6 +84,21 @@ INSTALLING {#{{{
         Hello, World!
 
         Yay!
+
+}#}}}
+INSTALL HISTORY {#{{{
+
+    "perl6 -v" from different versions I've installed.
+    
+    - 01/07/2017
+This is Rakudo version 2015.12-136-ga84d4ed built on MoarVM version 2015.12
+implementing Perl 6.c.
+        
+        - I moved v6.b to ~/.rakudobrew_orig/ when I installed v6.c.
+    
+    - ~12/2015
+This is rakudo version 2015.11-357-g587f700 built on MoarVM version 2015.11-34-gc3eea17 implementing Perl v6.b.
+
 }#}}}
 TUTORIALS {#{{{
     http://doc.perl6.org/language.html
@@ -104,6 +129,10 @@ UNIMPLEMENTED *** {
     I'm going to just assume those things will be fixed in v1.0.
 
     Ack for "NYI" for things that fit this bill.
+
+    I started with p6 version 6.b and upgraded to 6.c on 01/07/2016.  Many of 
+    my NYI marks have not been checked since the upgrade.  Check and remove 
+    any that are now working.
 }
 CHEC.K {
     
