--- a/README
+++ b/README
@@ -14,10 +14,8 @@ listed alphabetically, not in "you should follow them in this order" order.
 I'm going throw them as listed anyway just so I can keep track.
 
 Left off at
-    Lists, Sequences, and Arrays
-        Left off at List Contexts
-
-    next is "Phasers" (I got out of order).
+    Quoting Constructs
+        not done with this yet
 
 
 INSTALLING {#{{{
