--- a/README
+++ b/README
@@ -14,8 +14,8 @@ listed alphabetically, not in "you should follow them in this order" order.
 I'm going throw them as listed anyway just so I can keep track.
 
 Left off at
-    Quoting Constructs
-        not done with this yet
+    Regexes
+        Wildcards and character classes
 
 
 INSTALLING {#{{{
